fix button color on ios

--- a/public/main.css
+++ b/public/main.css
@@ -18,24 +18,18 @@ body {
   color-scheme: light dark;
   color: var(--text);
   touch-action: none;
+  user-select: none;
   background-color: var(--surface);
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  font-family:
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    "Open Sans",
-    "Helvetica Neue",
-    sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
+  @media (min-width: 600px) {
+    user-select: text;
+  }
 }
 
 img,
@@ -152,6 +146,7 @@ button {
   min-width: 7em;
   text-transform: uppercase;
   font-weight: 300;
+  color: inherit;
   background-color: transparent;
   backdrop-filter: blur(1px);
   cursor: pointer;
